--- a/HealthR/Web/HealthR.Web/Views/Users/Profile.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/Users/Profile.cshtml
@@ -6,7 +6,7 @@
 
 <div class="well">
     <h2 class="text-left text-primary">@Model.Name's dashboard </h2>
-    <p>@Model.Birthdate.ToShortDateString()</p>
+    
     @if (Model.UserName == User.Identity.Name)
     {
         <a asp-controller="Manage" asp-action="Index" class="btn btn-primary"> Edit Profile </a>
@@ -21,8 +21,8 @@
         <div class="panel panel-info">
             <div class="panel-heading">
 
-                <h3 class="panel-title"><span class="glyphicon glyphicon-refresh" onclick ="GetAppointments()"style="cursor:pointer;color:#ffffff;top:2px;float:right"></span> Appointments for today</h3>
-              
+                <h3 class="panel-title"><span class="glyphicon glyphicon-refresh" onclick="GetAppointments()" style="cursor:pointer;color:#ffffff;top:2px;float:right"></span> Appointments for today</h3>
+
             </div>
             <div id="todayappointments" class="panel-body">  </div>
 
@@ -33,10 +33,23 @@
         <div class="panel panel-info">
             <div class="panel-heading">
 
-                <h3 class="panel-title">Current doctor: @Model.DoctorName</h3>
+                <h3 class="panel-title"><span class=" glyphicon glyphicon-info-sign" onclick="GetDoctorDetails('@Model.DoctorName')" style="cursor:pointer;color:#ffffff;top:2px;float:right"></span> Your personal GP</h3>
 
             </div>
-            <div class="panel-body">  </div>
+            <div class="panel-body">
+
+                <div id="profileBox" class="hiddenDiv">
+                    <div class="thumbnail">
+                        <img id="patientProfileThumbnail" src="..." alt="">
+                        <div class="caption">
+                            <h3 id="doctorName">@(Model.DoctorName == null ? "Please contact your GP, to add you in the system!" : Model.DoctorName)</h3>
+                            <p id="doctorPhone">@(Model.DoctorPhone == null && Model.DoctorName != null ? "Phone: N/A" : Model.DoctorPhone)</p>
+                            <p id="doctorEmail">@Model.DoctorEmail</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
@@ -57,60 +70,83 @@
             <div class="panel-body">
                 <div class="row ">
                     <div class=" col-md-5">Schedule name</div>
-                    <div class=" col-md-3"> Appointments</div>
-                    <div class=" col-md-3">Status</div>
+                    <div class=" col-md-3">Appointments</div>
+                    <div class=" col-md-2">Status</div>
+                    <div class=" col-md-2">Activate</div>
                 </div>
                 @foreach (var schedule in Model.Schedules)
-            {
-                <div class="row">
-                    <div class=" col-md-5 float-left"><strong> @schedule.Name</strong></div>
-                    <div class=" col-md-3  text-center ">
-                        <span class="label label-primary"> @schedule.AppointmentsCount</span>
-                       
+                {
+                    <div class="row">
+                        <div class=" col-md-5 float-left"><strong> @schedule.Name</strong></div>
+                        <div class=" col-md-3  text-center ">
+                            <span class="label label-primary"> @schedule.AppointmentsCount</span>
+
+                        </div>
+
+                        @if (!schedule.IsActive)
+                        {<div id="@schedule.Id" class=" col-md-2 schedules" style="color:red;">Inactive</div>
+                            <div class="col-md-2 text-center" style=" cursor:pointer; color:#00e157" onclick="ChangeStatus('@schedule.Id')">
+                                <form asp-controller="Users" asp-action="ChangeSchedule" asp-area="" method="post" asp-route-id="@schedule.Id">
+                                   
+                                    <div class="text-center">
+
+                                        <button type="submit" value="change" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-ok"></span></button>
+                                    </div>
+                                </form>
+
+                            </div>
+                        }
+                        @if (schedule.IsActive)
+                        {<div id="@schedule.Id" class=" col-md-2 schedules" style="color:#00e157"> Active</div>}
+
+
                     </div>
-
-                    @if (schedule.IsDeleted)
-                {<div class=" col-md-3" style="color:red"> Inactive</div>}
-                    @if (!schedule.IsDeleted)
-                {<div class=" col-md-3" style="color:#00e157"> Active</div>}
-
-                </div>
-
-        }
+                    <br />
+                }
             </div>
         </div>
-        
+
     </div>
 </div>
 
 <script>
+
     function GetAppointments() {
         $.ajax({
             url: "/schedule/today",
             type: "GET",
             success: function (data) {
-              var box =  $("#todayappointments").empty();
-             
-             
-
-              if (data.length === 0) {
-                  $("<h3>No scheduled appointmets for today!</h3>").appendTo(box);
+                var box = $("#todayappointments").empty();
 
 
-              }
-              else {
-                  var li = $('<ol/>').appendTo(box)
-                  for (var el in data) {
-                      console.log(data[el].title)
-                      $("<li>" + data[el].title + " - <span style='float:right'>" + data[el].startTime.substring(10, 16) + "</span></li>").appendTo(li);
-                  };
-              }
-                
+
+                if (data.length === 0) {
+                    $("<h3>No scheduled appointmets for today!</h3>").appendTo(box);
+
+
+                }
+                else {
+                    var li = $('<ol/>').appendTo(box)
+                    for (var el in data) {
+                        console.log(data[el].title)
+                        $("<li>" + data[el].title + " - <span style='float:right'>" + data[el].startTime.substring(10, 16) + "</span></li>").appendTo(li);
+                    };
+                }
+
             },
             error: function () {
                 $("#todayappointments").empty();
             }
         });
+    }
+    var visible = true;
+
+    function GetDoctorDetails(dName) {
+
+        $("#profileBox").toggleClass('hiddenDiv', !visible)
+
+        visible = !visible
+
     }
 </script>
 
