Add Appointment to patient schedule, accept appointment, rosolve conflict from requested appointments, some unit tests, medical sheet create.

--- a/HealthR/Web/HealthR.Web/Areas/Doctor/Views/Patients/Index.cshtml
+++ b/HealthR/Web/HealthR.Web/Areas/Doctor/Views/Patients/Index.cshtml
@@ -106,7 +106,7 @@ else
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" onclick="clearProfileBox()" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="ModalLabel">Patient details</h4>
             </div>
             <div class="modal-body">
@@ -161,13 +161,13 @@ else
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         function clearProfileBox() {
-            console.log('dd')
+           
             $("div.thumbnail").toggleClass('hiddenDiv', true)
             $("#txtCustomer").val('')
           
 
         }
-      
+        clearTimeout()
         $(function () {
             $("#txtCustomer").autocomplete({
                 source: function (request, response) {
