--- a/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
@@ -8,5 +8,6 @@
 @using HealthR.Web
 @using HealthR.Web.Infrastructure.Exstensions
 @using HealthR.Services.Data.Models
-@using HealthR.Web.ViewModels.Users;
+@using HealthR.Web.ViewModels.Users
+@using HealthR.Web.ViewModels.MedicalSheet
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
