--- a/HealthR/Web/HealthR.Web/Areas/Doctor/Views/_ViewImports.cshtml
+++ b/HealthR/Web/HealthR.Web/Areas/Doctor/Views/_ViewImports.cshtml
@@ -7,5 +7,6 @@
 @using HealthR.Web
 @using HealthR.Data.Models
 @using HealthR.Services.Data.Doctor.Models
+@using HealthR.Web.Areas.Doctor.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
