--- a/HealthR/Web/HealthR.Web/Views/Schedule/ByWeek.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/Schedule/ByWeek.cshtml
@@ -210,13 +210,13 @@
                             <input hidden type="text" id="hfCustomer" asp-for="EditAppointment.PatientId" />
                         </div>
                     }
-                    <div class="form-group toEdit" hidden>
+                    <div class="form-group toEdit buttonsForOwners" hidden>
                         <label asp-for="EditAppointment.NewStartDay"></label>
                         <input asp-for="EditAppointment.NewStartDay" class="form-control" />
                         <span asp-validation-for="EditAppointment.NewStartDay" class="form-text text-danger"></span>
                     </div>
 
-                    <div class="form-group toEdit" hidden>
+                    <div class="form-group toEdit buttonsForOwners" hidden>
                         <label asp-for="EditAppointment.NewStartTime"></label>
                         <input class="form-control" type="time" name="EditAppointment.NewStartTime" step="900"
                                min="08:00" max="16:45">
@@ -225,14 +225,17 @@
                     </div>
 
                    
-                        <div id="buttonsForOwners" class="row justify-content-around">
-                            <div class="col-md-4">
-                                <input type="submit" value="Save" class="btn btn-primary" />
-                            </div>
-                            <div class="col-md-4 toEdit">
-                                <a id="deleteme" asp-controller="schedule" asp-action="DeleteAppointment" class=" btn btn-danger ">Delete</a>
-                            </div>
+                    <div class="row justify-content-around">
+                        <div class="col-md-5 buttonsForOwners">
+                            <input type="submit" value="Save" class="btn btn-primary" />
                         </div>
+                        <div class="col-md-3 toEdit">
+                            <a id="deleteme" asp-controller="schedule" asp-action="DeleteAppointment" class=" btn btn-danger ">Delete</a>
+                        </div>
+                        <div id="medicalsheetbutton" class="col-md-4 buttonsForOwners">
+                            <a   class="btn btn-primary" >Create Medical Sheet</a>
+                        </div>
+                    </div>
                 </form>
 
             </div>
@@ -321,6 +324,7 @@
 
         $('input[id="toClear"]').val('')
         $('#modal').on('show.bs.modal', function (event) {
+            $("#medicalsheetbutton").toggleClass('hiddenDiv', true)
 
             var cell = $(event.relatedTarget) // Button that triggered the modal
             // Extract info from data-* attributes
@@ -345,13 +349,21 @@
             var modal = $(this)
             var $form = modal.find("form")
             $("#buttonsForOwners").toggleClass('hiddenDiv', false)
+            if (patientId) {
+                var button = $("#medicalsheetbutton")
+                button.toggleClass('hiddenDiv', false)
+                var formAction = "/Doctor/MedicalSheet/New?patientid=" + patientId 
+                console.log(formAction)
+            
+                button.find('a').attr('href', formAction)
+            }
             modal.find("input").attr("readonly", false)
 
            
                 if (editOrSave == 'edit') {
 
-                    modal.find("#ModalLabel").html('Edint or Delete Appointment!')
-                    modal.find("form").find('input[type="submit"]').val('Change')
+                    modal.find("#ModalLabel").html('Edit or Delete Appointment!')
+                    modal.find("form").find('input[type="submit"]').val('Change appointment')
                     modal.find("form").find('.toEdit').attr('hidden', false)
 
                     $form.attr("action", "/schedule/EditAppointment")
@@ -374,7 +386,7 @@
             
             
                 if (!owner) {
-                    $("#buttonsForOwners").toggleClass('hiddenDiv', true)
+                    $(".buttonsForOwners").toggleClass('hiddenDiv', true)
                     modal.find("input").attr("readonly", true)
                 }
 
