Some date time validation and rounding. Little UI fixing.

--- a/HealthR/Web/HealthR.Web/Views/MedicalSheet/All.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/MedicalSheet/All.cshtml
@@ -8,7 +8,7 @@
 
 <div class="well">
     <h2 class="text-left text-primary">@ViewData["Title"]</h2>
-    <div data-toggle="modal" data-target="#modal" class="btn btn-primary"> Add new Medical Sheet </div>
+   
 </div>
 
 @if (Model.Count() > 0)
@@ -54,6 +54,6 @@
 }
 else
 {
-    <h3>No patients!</h3>
+    <h3>You don't have any medical sheets yet!</h3>
 }
 
